@@ -1,3 +1,8 @@
+2014-02-08  Glenn Morris  <rgm@gnu.org>
+
+	* auth.texi (GnuPG and EasyPG Assistant Configuration):
+	Be agnostic about authinfo/authinfo.gpg default order.  (Bug#16642)
+
 2014-02-06  Glenn Morris  <rgm@gnu.org>
 
 	* epa.texi (Mail-mode integration): Mention epa-mail-aliases.
