@@ -1,3 +1,7 @@
+2014-02-08  Glenn Morris  <rgm@gnu.org>
+
+	* auth-source.el (auth-sources): Doc fix.  (Bug#16642)
+
 2014-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-art.el (gnus-mime-buttonize-attachments-in-header): Display
